# slogic16u3-tools

./: .gitignore  README.md
cli/: CMakeLists.txt  README.md  requirements.txt  show.py
cli/src/: main.c
ota/: README.md
ota/src/: build.py  spi_config.py  spi_data_packet.py  spi_device.py  spi_flash.py  usb_device.py
pt/: requirements.txt
pt/src/: gui.py  logic_analyzer.py
